# meshcore-desktop

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/meshcore-app/: Cargo.toml  meshcore-nodes-2026-03-27 (1).gpx  meshcore-nodes-2026-03-27 (2).gpx  meshcore-nodes-2026-03-27 (3).gpx  meshcore-nodes-2026-03-27 (4).gpx  meshcore-nodes-2026-03-27 (5).gpx  meshcore-nodes-2026-03-27.gpx  tauri.conf.json
crates/meshcore-app/capabilities/: default.json
crates/meshcore-app/src/: main.rs
crates/meshcore-app/src/commands/: analysis.rs  channels.rs  companions.rs  connection.rs  contacts.rs  device.rs  messaging.rs  mod.rs  repeater.rs  settings.rs
crates/meshcore-cli/: Cargo.toml
crates/meshcore-cli/src/: commands.rs  display.rs  main.rs  repl.rs
crates/meshcore-crypto/: Cargo.toml
crates/meshcore-crypto/src/: aes_ecb.rs  hmac_sha256.rs  identity.rs  lib.rs
crates/meshcore-protocol/: Cargo.toml
crates/meshcore-protocol/src/: channel.rs  compression.rs  lib.rs  types.rs
crates/meshcore-service/: Cargo.toml
crates/meshcore-service/src/: channels.rs  connection.rs  contacts.rs  device.rs  events.rs  lib.rs  los.rs  messaging.rs  repeater.rs  state.rs
crates/meshcore-storage/: Cargo.toml
crates/meshcore-storage/src/: channels.rs  companions.rs  contacts.rs  db.rs  lib.rs  messages.rs  models.rs  settings.rs
crates/meshcore-transport/: Cargo.toml
crates/meshcore-transport/src/: lib.rs  manager.rs  reconnect.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  store.ts  types.ts
frontend/src/components/: ElevationProfile.tsx  EmojiPicker.tsx  ErrorBoundary.tsx  MessageContent.tsx  QrCodeModal.tsx  Sidebar.tsx
frontend/src/hooks/: useEvents.ts  useTauri.ts
frontend/src/i18n/: de.ts  en.ts  es.ts  fr.ts  it.ts  ja.ts  ko.ts  nl.ts  pl.ts  pt.ts  ru.ts  zh.ts
frontend/src/test/: gpx.test.ts  setup.ts  store.test.ts  utils.test.ts  views.test.tsx
frontend/src/utils/: date.ts  geo.ts  gpx.ts  meshcore-uri.ts
frontend/src/views/: ChatView.tsx  ConnectionView.tsx  ContactsView.tsx  DeviceView.tsx  MapView.tsx  RepeaterView.tsx  SettingsView.tsx
