[package]
name = "meshcore-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Application desktop MeshCore basée sur Tauri 2"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
meshcore-service = { path = "../meshcore-service" }
meshcore-protocol = { path = "../meshcore-protocol" }
meshcore-storage = { path = "../meshcore-storage" }
meshcore-transport = { path = "../meshcore-transport" }
meshcore-rs = { workspace = true }
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio-serial = { workspace = true }
btleplug = { workspace = true }
uuid = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-deep-link = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
