[package]
name = "meshcore-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Couche cryptographique MeshCore : AES-128-ECB, HMAC-SHA256, Ed25519"

[dependencies]
aes = { workspace = true }
cipher = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4"
