[package]
name = "meshcore-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Couche protocole MeshCore : types, codecs, compression"

[dependencies]
meshcore-rs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
smaz = { workspace = true }

[dev-dependencies]
