[package]
name = "meshcore-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Couche de persistance MeshCore : SQLite"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
